--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "BlueMapWeb"]
 	path = BlueMapWeb
-	url = https://github.com/BlueMap-Minecraft/BlueMapWeb
+	url = ../../Mark-225/BlueMapWeb.git
